# Call-Me-Maybe

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
data/output/: output.json
llm_sdk/llm_sdk/: __init__.py
src/: ConstrainedGenerator.py  Controller.py  __main__.py
src/llm_custom/: LLMCustom.py  __init__.py
src/models/: FunctionDefinitionModel.py  FunctionModel.py  InputModel.py  OutputModel.py
src/utils/: __init__.py
src/utils/FileLoader/: BaseLoader.py  JSONLoader.py  __init__.py
src/utils/PausingArgumentParser/: PausingArgumentParser.py
tests/: test00Parser.py  test01JSONLoader.py  test02InputModel.py  test03FunctionDefinitionModel.py  test04EncodeDecode.py
