[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    ]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
