[project]
name = "call-me-maybe"
version = "0.4.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.12.5",
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]